# aXis

./: .gitignore  LICENSE  README.md  axis_webapp.py  pytest.ini  requirements.txt  setup_infra.sh
axis_pyspark/: extra_requirements.txt  spark_axis_db.py
axis_pyspark/functions/: avg_word_vector.py  cosine_similarity.py  get_spark.py
axis_python/: axis_db.py  vector_registry.py
axis_python/functions/: cosine_similarity.py
axis_python/models/all-MiniLM-L6-v2/weights/: weights_00.json
axis_python/tokeniser/: base_tokeniser.py  bert_tokenizer.py  tokeniser.py
axis_python/transformers/: __init__.py  attention.py  bert_encoder.py  embeddings.py  encoder_layer.py  feed_forward_network.py  feedforward.py  model.py  my_transformer.py  pooling.py
axis_rust/: Cargo.toml  axis_rust.db
axis_rust/src/: main.rs
general_knowledge/: part-00000-d482676c-e884-4508-91bb-1b5b9ab3cbab-c000.snappy.parquet
general_knowledge.axis/: part-00000-5b37cbb5-336a-40f3-bf86-a786e7da40db-c000.snappy.parquet  part-00000-642e23a4-7558-42e5-8377-f31333e46e2b-c000.snappy.parquet
templates/: index.html
test/: __init__.py  axisdb.py  conftest.py  vector_registry.py
