[package]
name = "axis_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "axis_rust"
create-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features= ["extension-module", "abi3", "abi3-py38", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
chrono = "0.4"
